Update footer copyright to reflect the correct name

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <div class="footer-content">
                 <div class="logo" style="font-size: 2rem; margin-bottom: 1rem;">◈ Navi</div>
                 <p class="footer-text">
-                    © 2026 Alex Cipher. All rights reserved. | Crafted with passion and code.
+                    © 2026 Navitha Navindul. All rights reserved. | Crafted with passion and code.
                 </p>
                 <p class="footer-text" style="margin-top: 0.5rem;">
                     Available for freelance projects and collaborations
