Update project details for English to Sinhala Translator, including new links and tags

--- a/index.html
+++ b/index.html
@@ -296,22 +296,20 @@
             
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image">🚀</div>
+                    <div class="project-image">🌐</div>
                     <div class="project-info">
-                        <h3 class="project-title">Cyber Dashboard Pro</h3>
+                        <h3 class="project-title">English to Sinhala Translator</h3>
                         <p class="project-desc">
                             A futuristic admin dashboard with real-time data visualization, 
                             glassmorphism design, and advanced analytics capabilities.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">React</span>
-                            <span class="tag">D3.js</span>
-                            <span class="tag">WebSocket</span>
-                            <span class="tag">Chart.js</span>
+                            <span class="tag">TypeScript</span>
+                            <span class="tag">CSS</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Live Demo</a>
-                            <a href="#" class="project-link">Code</a>
+                            <a href="https://tra-sigma.vercel.app/" class="project-link">Live Demo</a>
+                            <a href="https://github.com/NAVI-SL/English-to-Sinhala-translator.git" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
