Add target="_blank" to project links for external navigation

--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
                             <span class="tag">CSS</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://tra-sigma.vercel.app/" class="project-link">Live Demo</a>
-                            <a href="https://github.com/NAVI-SL/English-to-Sinhala-translator.git" class="project-link">Code</a>
+                            <a href="https://tra-sigma.vercel.app/" target="_blank" class="project-link">Live Demo</a>
+                            <a href="https://github.com/NAVI-SL/English-to-Sinhala-translator.git" target="_blank" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
