--- a/index.html
+++ b/index.html
@@ -383,21 +383,21 @@
             
             <div class="glass-card contact-content">
                 <div class="contact-grid">
-                    <div class="contact-form">
+                   <form class="contact-form" id="contactForm" action="https://formspree.io/f/meeejwqj" method="POST">
                         <div class="form-group">
-                            <input type="text" class="form-input" placeholder="Your Name" required>
+                            <input type="text" class="form-input" name="name" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-input" placeholder="Your Email" required>
+                            <input type="email" class="form-input" name="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-input" placeholder="Subject" required>
+                            <input type="text" class="form-input" name="subject" placeholder="Subject" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-textarea" placeholder="Your Message" required></textarea>
+                            <textarea class="form-textarea" name="message" placeholder="Your Message" required></textarea>
                         </div>
-                        <button class="cyber-btn" style="width: 100%;">Send Message</button>
-                    </div>
+                        <button type="submit" class="cyber-btn" style="width: 100%;">Send Message</button>
+                    </form>
 
                     <div class="contact-info-cards">
                         <div class="info-card">
