--- a/index.html
+++ b/index.html
@@ -294,31 +294,27 @@
             <h2 class="section-title">PROJECTS</h2>
             <p class="section-subtitle">A showcase of my latest work and creative experiments</p>
             
-            <div class="projects-filter">
-                <button class="filter-btn active" data-filter="all">All Projects</button>
-                <button class="filter-btn" data-filter="web">Web Apps</button>
-                <button class="filter-btn" data-filter="design">UI/UX</button>
-                <button class="filter-btn" data-filter="3d">3D/WebGL</button>
-            </div>
+
 
             <div class="projects-grid">
                 <div class="project-card" data-category="web">
-                    <div class="project-image">🚀</div>
+                    <div class="project-image">
+                        <img src="./img/translator-project.png" alt="English to Sinhala Translator">
+                    </div>
                     <div class="project-info">
-                        <h3 class="project-title">Cyber Dashboard Pro</h3>
+                        <h3 class="project-title">English to Sinhala Translator</h3>
                         <p class="project-desc">
-                            A futuristic admin dashboard with real-time data visualization, 
-                            glassmorphism design, and advanced analytics capabilities.
+                            A real-time translation tool featuring a dark mode interface, 
+                            instant text processing, and seamless language conversion.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">React</span>
-                            <span class="tag">D3.js</span>
-                            <span class="tag">WebSocket</span>
-                            <span class="tag">Chart.js</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">API</span>
+                            <span class="tag">CSS3</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Live Demo</a>
-                            <a href="#" class="project-link">Code</a>
+                            <a href="https://tra-sigma.vercel.app/" target="_blank" class="project-link">Live Demo</a>
+                            <a href="https://github.com/NAVI-SL/English-to-Sinhala-translator" target="_blank" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
@@ -338,8 +334,8 @@
                             <span class="tag">Cannon.js</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Play Game</a>
-                            <a href="#" class="project-link">Source</a>
+                            <a href="#" target="_blank" class="project-link">Live Demo</a>
+                            <a href="#" target="_blank" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
@@ -358,8 +354,8 @@
                             <span class="tag">Tailwind</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Visit Site</a>
-                            <a href="#" class="project-link">Details</a>
+                            <a href="#" target="_blank" class="project-link">Live Demo</a>
+                            <a href="#" target="_blank" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
@@ -378,8 +374,8 @@
                             <span class="tag">TensorFlow.js</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Demo</a>
-                            <a href="#" class="project-link">GitHub</a>
+                            <a href="#" target="_blank" class="project-link">Live Demo</a>
+                            <a href="#" target="_blank" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
@@ -399,8 +395,8 @@
                             <span class="tag">Node.js</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">View</a>
-                            <a href="#" class="project-link">Code</a>
+                            <a href="#" target="_blank" class="project-link">Live Demo</a>
+                            <a href="#" target="_blank" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
@@ -419,71 +415,13 @@
                             <span class="tag">TypeScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Explore</a>
-                            <a href="#" class="project-link">Docs</a>
+                            <a href="#" class="project-link">Live Demo</a>
+                            <a href="#" class="project-link">Code</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="project-card" data-category="web">
-                    <div class="project-image">🛒</div>
-                    <div class="project-info">
-                        <h3 class="project-title">E-Shop Platform</h3>
-                        <p class="project-desc">
-                            Full-featured e-commerce platform with payment integration, 
-                            inventory management, and customer analytics dashboard.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">Next.js</span>
-                            <span class="tag">Stripe</span>
-                            <span class="tag">MongoDB</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Demo</a>
-                            <a href="#" class="project-link">Case Study</a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="project-card" data-category="3d">
-                    <div class="project-image">🌌</div>
-                    <div class="project-info">
-                        <h3 class="project-title">Cosmic Explorer</h3>
-                        <p class="project-desc">
-                            Interactive 3D space exploration experience with realistic physics, 
-                            celestial bodies, and immersive sound design.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">Three.js</span>
-                            <span class="tag">Shaders</span>
-                            <span class="tag">Web Audio</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Launch</a>
-                            <a href="#" class="project-link">About</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card" data-category="web design">
-                    <div class="project-image">📊</div>
-                    <div class="project-info">
-                        <h3 class="project-title">DataFlow Dashboard</h3>
-                        <p class="project-desc">
-                            Enterprise data visualization platform with drag-and-drop widgets, 
-                            custom reports, and team collaboration features.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">React</span>
-                            <span class="tag">Recharts</span>
-                            <span class="tag">GraphQL</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Preview</a>
-                            <a href="#" class="project-link">Details</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
