docs: Update project technology tags, replacing JavaScript, API, and CSS3 with TypeScript.

--- a/index.html
+++ b/index.html
@@ -308,9 +308,7 @@
                             instant text processing, and seamless language conversion.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">JavaScript</span>
-                            <span class="tag">API</span>
-                            <span class="tag">CSS3</span>
+                            <span class="tag">TypeScript</span>
                         </div>
                         <div class="project-links">
                             <a href="https://tra-sigma.vercel.app/" target="_blank" class="project-link">Live Demo</a>
