refactor: Streamline portfolio by removing unused sections and counter animation, and add GitHub link to navigation.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
 </head>
 <body>
     <canvas id="canvas-bg"></canvas>
-
+    <!-- NAVIGATION -->
     <div class="content-wrapper">
         <nav>
             <div class="logo"><a href="#home">◈ Navi</a></div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+
                 <li><a href="#projects">Projects</a></li>
+
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <a href="https://github.com/NAVI-SL" target="_blank" class="nav-github-btn" aria-label="GitHub Profile">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+            </a>
         </nav>
 
+        <!-- HERO SECTION -->
         <section id="home" class="hero">
             <div class="hero-content">
                 <div class="status-badge">Available for Freelance</div>
@@ -36,27 +43,8 @@
             </div>
         </section>
 
-        <section class="stats-section">
-            <div class="stats-grid">
-                <div class="stat-item">
-                    <div class="stat-number" data-target="150">0</div>
-                    <div class="stat-label">Projects Completed</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-number" data-target="50">0</div>
-                    <div class="stat-label">Happy Clients</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-number" data-target="8">0</div>
-                    <div class="stat-label">Years Experience</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-number" data-target="25">0</div>
-                    <div class="stat-label">Awards Won</div>
-                </div>
-            </div>
-        </section>
 
+        <!-- ABOUT SECTION -->
         <section id="about" class="section">
             <h2 class="section-title">ABOUT_ME</h2>
             <p class="section-subtitle">Passionate developer turning ideas into pixel-perfect reality</p>
@@ -199,97 +187,7 @@
             </div>
         </section>
 
-        <section id="services" class="section" style="background: rgba(0, 243, 255, 0.02);">
-            <h2 class="section-title">SERVICES</h2>
-            <p class="section-subtitle">Comprehensive solutions for your digital needs</p>
-            
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">💻</div>
-                    <h3 class="service-title">Web Development</h3>
-                    <p class="service-desc">
-                        Custom web applications built with modern frameworks and best practices.
-                    </p>
-                    <ul class="service-features">
-                        <li>Responsive Design</li>
-                        <li>Progressive Web Apps</li>
-                        <li>E-commerce Solutions</li>
-                        <li>CMS Integration</li>
-                    </ul>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">🎨</div>
-                    <h3 class="service-title">UI/UX Design</h3>
-                    <p class="service-desc">
-                        Beautiful, user-centered interfaces that enhance engagement and conversion.
-                    </p>
-                    <ul class="service-features">
-                        <li>Wireframing & Prototyping</li>
-                        <li>Design Systems</li>
-                        <li>User Research</li>
-                        <li>Accessibility Audit</li>
-                    </ul>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">⚡</div>
-                    <h3 class="service-title">Performance Optimization</h3>
-                    <p class="service-desc">
-                        Speed up your website and improve Core Web Vitals for better SEO and UX.
-                    </p>
-                    <ul class="service-features">
-                        <li>Code Splitting</li>
-                        <li>Image Optimization</li>
-                        <li>Lazy Loading</li>
-                        <li>Caching Strategies</li>
-                    </ul>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">🚀</div>
-                    <h3 class="service-title">Interactive Experiences</h3>
-                    <p class="service-desc">
-                        Engaging 3D visualizations and animations using WebGL and Canvas API.
-                    </p>
-                    <ul class="service-features">
-                        <li>3D Graphics (Three.js)</li>
-                        <li>Data Visualization</li>
-                        <li>Scroll Animations</li>
-                        <li>Particle Effects</li>
-                    </ul>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">📱</div>
-                    <h3 class="service-title">Mobile Development</h3>
-                    <p class="service-desc">
-                        Cross-platform mobile apps with native-like performance and feel.
-                    </p>
-                    <ul class="service-features">
-                        <li>React Native</li>
-                        <li>Hybrid Apps</li>
-                        <li>Mobile-First Design</li>
-                        <li>App Store Deployment</li>
-                    </ul>
-                </div>
-
-                <div class="service-card">
-                    <div class="service-icon">🔧</div>
-                    <h3 class="service-title">Maintenance & Support</h3>
-                    <p class="service-desc">
-                        Ongoing support to keep your digital products running smoothly.
-                    </p>
-                    <ul class="service-features">
-                        <li>Bug Fixes</li>
-                        <li>Security Updates</li>
-                        <li>Feature Additions</li>
-                        <li>24/7 Monitoring</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
+        <!-- PROJECTS SECTION -->
         <section id="projects" class="section">
             <h2 class="section-title">PROJECTS</h2>
             <p class="section-subtitle">A showcase of my latest work and creative experiments</p>
@@ -309,6 +207,7 @@
                         </p>
                         <div class="project-tags">
                             <span class="tag">TypeScript</span>
+                            <span class="tag">API</span>
                         </div>
                         <div class="project-links">
                             <a href="https://tra-sigma.vercel.app/" target="_blank" class="project-link">Live Demo</a>
@@ -423,6 +322,7 @@
             </div>
         </section>
 
+        <!-- CONTACT SECTION -->
         <section id="contact" class="section">
             <h2 class="section-title">LET'S CONNECT</h2>
             <p class="section-subtitle">Have a project in mind? Let's build something extraordinary together</p>
@@ -505,6 +405,7 @@
             </div>
         </section>
 
+        <!-- FOOTER -->
         <footer>
             <div class="footer-content">
                 <div class="logo" style="font-size: 2rem; margin-bottom: 1rem;">◈ Navi</div>
